auth/kanidm/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanidm
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - auth.homelab.icanwalkonwater.dev
    secretName: kanidm-server-tls
  rules:
  - host: auth.homelab.icanwalkonwater.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanidm
            port:
              name: https
